--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -35,6 +35,14 @@
 					<li><a href="/calendar" class="">Calendar</a></li>
 				</ul>
 			</li>
+			<li><a href="/industries" class="">Industries</a>
+				<ul>
+					<li><a href="/industries" class="">Commerce Community</a></li>
+					<li><a href="/industries" class="">Education (K-12 Classroom)</a></li>
+					<li><a href="/industries" class="">Health and Wellness</a></li>
+					<li><a href="/industries" class="">Media and Entertainment</a></li>
+				</ul>
+			</li>
 			<li><a href="/post" class="">Blog</a></li>
 			<!-- <li><a href="/paper" class="">Papers</a></li> -->
 			<li><a href="/voice_interoperability_form" class="">Workshops</a></li>
@@ -62,6 +70,14 @@
 					<li><a href="/faq" class="">FAQ</a></li>
 					<li><a href="/voice-chats" class="">Voice Chats</a></li>
 					<li><a href="/calendar" class="">Calendar</a></li>
+				</ul>
+			</li>
+			<li><a href="/industries" class="">Industries</a>
+				<ul>
+					<li><a href="/industries" class="">Commerce Community</a></li>
+					<li><a href="/industries" class="">Education (K-12 Classroom)</a></li>
+					<li><a href="/industries" class="">Health and Wellness</a></li>
+					<li><a href="/industries" class="">Media and Entertainment</a></li>
 				</ul>
 			</li>
 			<li><a href="/post" class="">Blog</a></li>
