--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -37,10 +37,10 @@
 			</li>
 			<li><a href="/industries" class="">Industries</a>
 				<ul>
-					<li><a href="/industries" class="">Commerce Community</a></li>
-					<li><a href="/industries" class="">Education (K-12 Classroom)</a></li>
-					<li><a href="/industries" class="">Health and Wellness</a></li>
-					<li><a href="/industries" class="">Media and Entertainment</a></li>
+					<li><a href="/industries/commerce-community" class="">Commerce Community</a></li>
+					<li><a href="/industries/education" class="">Education (K-12 Classroom)</a></li>
+					<li><a href="/industries/health-wellness" class="">Health and Wellness</a></li>
+					<li><a href="/industries/media-entertainment" class="">Media and Entertainment</a></li>
 				</ul>
 			</li>
 			<li><a href="/post" class="">Blog</a></li>
@@ -74,10 +74,10 @@
 			</li>
 			<li><a href="/industries" class="">Industries</a>
 				<ul>
-					<li><a href="/industries" class="">Commerce Community</a></li>
-					<li><a href="/industries" class="">Education (K-12 Classroom)</a></li>
-					<li><a href="/industries" class="">Health and Wellness</a></li>
-					<li><a href="/industries" class="">Media and Entertainment</a></li>
+					<li><a href="/industries/commerce-community" class="">Commerce Community</a></li>
+					<li><a href="/industries/education" class="">Education (K-12 Classroom)</a></li>
+					<li><a href="/industries/health-wellness" class="">Health and Wellness</a></li>
+					<li><a href="/industries/media-entertainment" class="">Media and Entertainment</a></li>
 				</ul>
 			</li>
 			<li><a href="/post" class="">Blog</a></li>
