--- a/site/layouts/section/initiatives.html
+++ b/site/layouts/section/initiatives.html
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-<div class="tc mb5">
+<div class="tc mb5 mt5">
 <a href="/contact" class="btn w-100 w-auto-ns raise" >Join Now</a>
 </div>
 
