--- a/site/layouts/section/friends-of-the-open-voice-network.html
+++ b/site/layouts/section/friends-of-the-open-voice-network.html
@@ -13,7 +13,7 @@
       {{ range .logos }}
       <div class="w-100 w-33-ns ph1-ns">
         <a href="{{ .link }}" target="_blank">
-        <img src="{{ .image }}" alt="{{ .alt }}" />
+        <img class="w-100" src="{{ .image }}" alt="{{ .alt }}" />
         </a>
       </div>
       {{ end }}
