positions to hire

--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,6 +1,10 @@
 {{ define "main" }}
 
-{{ partial "jumbotron" (dict "imageUrl" "/img/7.jpg" "title" "This is where the heading goes" "subtitle" "This is where the subtitle goes") }}
+{{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
+
+<div class="bg-off-white pt4">
+
 {{ .Content }}
+</div>
 
 {{ end }}
