--- a/site/layouts/_default/apply-form.html
+++ b/site/layouts/_default/apply-form.html
@@ -20,7 +20,7 @@
       </select>
       
     </div>
-    <div class="mv2">Proposed Topic for panel discussion <br />
+    <div class="mv2">Please upload an updated resume detailing your experience and expertise. <br />
     <input type="file" name="resume_cv" accept=".pdf,.doc,.docx,.txt" />
     </div>
   </div>
