--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -2,8 +2,8 @@
 	<nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center bg-white divider-grey relative">
 
 		<!-- Logo -->
-		<a href="/" class="pa3 db mr4 h-100 w3 flex-none">
-			<img src="/img/logo.svg" alt="Open Voice Network logo" class="br0 db mb0 w-70"/>
+		<a href="/" class="pl3 db mr4 h-100 w3 flex-none">
+			<img src="/img/logos/logo.png" alt="Open Voice Network logo" class="br0 db mb0 w-100"/>
 		</a>
 
 		<!-- Primary Nav -->
