--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -4,7 +4,7 @@
 
 		<div class="measure-narrow center mb4">
 
-			<img src="/img/logo.svg" alt="Open Voice Network logo" class="db w4 center mb4 br0">
+			<img src="/img/logos/logo-white.png" alt="Open Voice Network logo" class="db w4 center mb4 br0">
 			<p class="f3 lh-title light-gray b tc mb2">Newsletter subscribe</p>
 			<p>Get news from us in your inbox on a regular basis. Be the first to learn the latest with the Open Voice Network.</p>
 
