--- a/site/layouts/_default/apply-form.html
+++ b/site/layouts/_default/apply-form.html
@@ -16,7 +16,7 @@
         <option value="">- select -</option>
         <option value="Programmer / Software Developer">Programmer / Software Developer</option>
         <option value="Data Security Specialist">Data Security Specialist</option>
-        <option value="System Architect Developer">System Architect Developer</option>
+        <option value="System Architect / Development Engineer">System Architect / Development Engineer</option>
       </select>
       
     </div>
