--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -36,10 +36,9 @@
 					<li><a href="/calendar" class="">Calendar</a></li>
 				</ul>
 			</li>
-			<li><a href="/industries" class="">Industries</a>
-			</li>
-			<li><a href="/post" class="">Blog</a></li>
+			<li><a href="/industries" class="">Industries</a></li>
 			<li><a href="/initiatives" class="">Initiatives</a></li>
+			<li><a href="/post" class="">Blog</a></li>
 			<!-- <li><a href="/paper" class="">Papers</a></li> -->
 			<li><a href="/voice_interoperability_form" class="">Workshops</a></li>
 			<li><a href="/contact" class="">Contact</a></li>
@@ -69,10 +68,9 @@
 					<li><a href="/calendar" class="">Calendar</a></li>
 				</ul>
 			</li>
-			<li><a href="/industries" class="">Industries</a>
-			</li>
-			<li><a href="/post" class="">Blog</a></li>
+			<li><a href="/industries" class="">Industries</a></li>
 			<li><a href="/initiatives" class="">Initiatives</a></li>
+			<li><a href="/post" class="">Blog</a></li>
 			<!-- <li><a href="/paper" class="">Papers</a></li> -->
 			<li><a href="/voice_interoperability_form" class="">Workshops</a></li>
 			<li><a href="/contact" class="">Contact</a></li>
