--- a/site/layouts/section/industries.html
+++ b/site/layouts/section/industries.html
@@ -2,9 +2,9 @@
 
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
 
-<div class="mw7 center ph3 pt4">
+<div class="mw7 center ph3 pt4 mb4">
 
-  <div class="cms mw6">
+  <div class="cms">
   {{ .Content }}  
   </div>
 </div>
