--- a/src/css/imports/_styles.css
+++ b/src/css/imports/_styles.css
@@ -41,6 +41,16 @@ sub{
   }
 }
 
+/*** Table of Contents ***/
+ol.table-of-contents{
+  list-style-type: upper-roman !important;
+}
+.cms ol.table-of-contents > li:before {
+  content: none !important;
+}
+ol.table-of-contents > li{
+  margin-left: var(--spacing-small);
+}
 /*** CMS markdown image hacks ***/
 .cms img[src$='#left'] { float:left;}
 .cms img[src$='#left-thumbnail'] { 
