change page names

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -19,8 +19,8 @@
 				<ul class="mb3">
 					<li><a href="/" class="link">Home</a></li>
 					<li><a href="/join" class="link">How to join</a></li>
-					<li><a href="/about" class="link">About</a></li>
-					<li><a href="/post" class="link">Blog</a></li>
+					<li><a href="/about" class="link">About Us</a></li>
+					<li><a href="/post" class="link">News and Media</a></li>
 					<li><a href="/contact" class="link">Contact</a></li>
 				</ul>
 			</div>
