--- a/site/layouts/section/friends-of-the-open-voice-network.html
+++ b/site/layouts/section/friends-of-the-open-voice-network.html
@@ -8,6 +8,11 @@
 		<h2 class="f2 b lh-title mb2">{{.heading}}</h2>
 		<p class="mb4 mw6">{{.description | markdownify}}</p>
 	</div>
+
+  <div class="tc mb4">
+<a href="/contact" class="btn w-100 w-auto-ns raise" >Become a Friend</a>
+</div>
+
     {{ if .logos }}
     <div class="mw7 center flex flex-row flex-wrap mb4">
       {{ range .logos }}
@@ -23,7 +28,7 @@
 </div>
 
 <div class="tc mb4">
-<a href="/contact" class="btn w-100 w-auto-ns raise" >Contact Us To Join</a>
+<a href="/contact" class="btn w-100 w-auto-ns raise" >Become a Friend</a>
 </div>
 
 {{ end }}
