--- a/site/layouts/section/friends-of-the-open-voice-network.html
+++ b/site/layouts/section/friends-of-the-open-voice-network.html
@@ -10,7 +10,7 @@
 	</div>
 
   <div class="tc mb4">
-    <a href="/contact" class="btn w-100 w-auto-ns raise" >Become a Friend</a>
+    <a href="/friends-of-the-open-voice-network/become-a-friend/" class="btn w-100 w-auto-ns raise" >Become a Friend</a>
   </div>
 
     {{ if .logos }}
