--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -16,6 +16,7 @@
 		<ul class="navbar">
 			<li><a href="/about" class="">About Us</a>
 				<ul>
+					<li><a href="/affiliations" class="">Affiliations</a></li>
 					<li><a href="/ambassadors" class="">Ambassadors</a></li>
 					<li><a href="/industry-advisor-council" class="">Industry Advisor Council</a></li>
 				</ul>
@@ -49,6 +50,7 @@
 		<ul class="navbar dn">
 			<li><a href="/about" class="">About Us</a>
 				<ul>
+					<li><a href="/affiliations" class="">Affiliations</a></li>
 					<li><a href="/ambassadors" class="">Ambassadors</a></li>
 					<li><a href="/industry-advisor-council" class="">Industry Advisor Council</a></li>
 				</ul>
