--- a/site/layouts/section/affiliations.html
+++ b/site/layouts/section/affiliations.html
@@ -3,13 +3,15 @@
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
 
 <div class="mw7 center ph3 pt4">
-
+  <div class="cms mb4">
+  {{.Params.intro}}
+  </div>
   {{ range $index, $element := .Params.sections }}
     
-      <div>
-        <div>{{$element.heading}}</div>
-        <div><a href="{{$element.logo_link}}" target="_blank"><img src="{{$element.logo}}" /></a></div>
-        <div class="cms">{{$element.text}}</div>
+      <div class="tc mb4 ">
+        <div><h2 class="f2 b lh-title mb2 tc">{{$element.heading}}</h2></div>
+        <div><a href="{{$element.logo_link}}" target="_blank"><img class="w-33" src="{{$element.logo}}" /></a></div>
+        <div class="cms">{{$element.text | markdownify}}</div>
       </div>
     
   {{ end }}
