admin for audio reviews

--- a/site/layouts/section/audio-reviews.html
+++ b/site/layouts/section/audio-reviews.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="center mw5 mv4">
-    <div id="witlingo-radio-recorder" data-id="9619248016" data-url="https://radio.witlingo.com"></div><script src="https://radio.witlingo.com/js/embed/recorder"></script>
+    {{ .recorder | safeHTML}}
   </div>
 </div>
 
