added home page post feature

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,6 +2,8 @@
 
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title "subtitle" .Params.subtitle "class" .Params.jumboClass) }}
 
+{{ partial "home-featured" }}
+
 {{ partial "short-text" .Params.blurb}}
 
 
