--- a/site/layouts/_default/li-home-info.html
+++ b/site/layouts/_default/li-home-info.html
@@ -2,6 +2,7 @@
 	<div class="bg-grey-1 pv4 ">
 		<h2 class="f3 b lh-title mb1 primary">{{ .Title }}</h2>
 		<p class="mid-gray lh-title mb2">{{ .Date.Format "Mon, Jan 2, 2006" }}</p>
-		<p>{{ .Description | markdownify }}</p>
+		<p class="mb0">{{ .Description }}</p>
+		{{ .Content }}
 	</div>
 </div>
