fix header text and added it to markdown file

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,7 +2,7 @@
 
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title "subtitle" .Params.subtitle "class" .Params.jumboClass) }}
 
-{{ partial "home-featured" }}
+{{ partial "home-featured" .Params.featured}}
 
 {{ partial "short-text" .Params.blurb}}
 
