--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -41,8 +41,9 @@
 			<li><a href="/industries" class="">Industries</a></li>
 			<li><a href="/initiatives" class="">Initiatives</a></li>
 			<li><a href="/post" class="">News and Media</a></li>
+			<li><a href="/events" class="">Events</a></li>
 			<!-- <li><a href="/paper" class="">Papers</a></li> -->
-			<li><a href="/voice_interoperability_form" class="">Workshops</a></li>
+			<!-- <li><a href="/voice_interoperability_form" class="">Workshops</a></li> -->
 			<li><a href="/contact" class="">Contact</a></li>
 		</ul>
 
@@ -76,7 +77,7 @@
 			<li><a href="/initiatives" class="">Initiatives</a></li>
 			<li><a href="/post" class="">News and Media</a></li>
 			<!-- <li><a href="/paper" class="">Papers</a></li> -->
-			<li><a href="/voice_interoperability_form" class="">Workshops</a></li>
+			<!-- <li><a href="/voice_interoperability_form" class="">Workshops</a></li> -->
 			<li><a href="/contact" class="">Contact</a></li>
 		</ul>
 	</div>
