--- a/site/layouts/section/audio-reviews.html
+++ b/site/layouts/section/audio-reviews.html
@@ -10,6 +10,10 @@
   <div class="center mw5 mv4">
     {{ .Params.recorder | safeHTML}}
   </div>
+
+  <div class="center mb4">
+    {{ .Params.audiowall | safeHTML}}
+  </div>
 </div>
 
 {{ end }}
