--- a/site/layouts/partials/jumbotron_gradient.html
+++ b/site/layouts/partials/jumbotron_gradient.html
@@ -1,8 +1,8 @@
-<div class="h6 pv5 pv6-l ph3 bg-center cover {{.class}}" style="background-image: url('{{.imageUrl}}')">
-  <div class="mw7 center ph3">
-    <div class="db mb3">
-      <div class="mw7 relative bg-fix-primary mb3" style="text-shadow: 0 2px 3px rgba(0, 0, 0, 0.993)"> 
-        <h1 class="f2 f1-l b di lh-title mb3 white">
+<div class="h7 bg-center cover {{.class}}" style="background-image: url('{{.imageUrl}}')">
+  <div class="mw7 center ">
+    <div class="db ">
+      <div class="mw7 relative bg-fix-primary" style="text-shadow: 0 2px 3px rgba(0, 0, 0, 0.993)"> 
+        <h1 class="f2 f1-l b di lh-title white">
           {{.title}}
         </h1>
       </div>
