add youtube social icon to footer

--- a/site/layouts/partials/social-links.html
+++ b/site/layouts/partials/social-links.html
@@ -3,4 +3,5 @@
 {{ partial "social-icon" (dict "link" "https://twitter.com/openvoicenet" "svg" "icons-twitter") }}
 {{ partial "social-icon" (dict "link" "https://www.linkedin.com/company/open-voice-network" "svg" "icons-linkedin") }}
 {{ partial "social-icon" (dict "link" "https://github.com/open-voice-network" "svg" "icons-github") }}
+{{ partial "social-icon" (dict "link" "https://www.youtube.com/channel/UCPXI1_iSw2ZNgYRPR3wUfwQ" "svg" "icons-youtube") }}
 </ul>
