added new webinars page

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -36,6 +36,7 @@
 					<li><a href="/faq" class="">FAQ</a></li>
 					<li><a href="/voice-chats" class="">Voice Chats</a></li>
 					<li><a href="/calendar" class="">Calendar</a></li>
+					<li><a href="/webinars" class="">Webinars</a></li>
 				</ul>
 			</li>
 			<li><a href="/industries" class="">Industries</a></li>
