--- a/site/layouts/webinars/webinars.html
+++ b/site/layouts/webinars/webinars.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-{{ partial "jumbotron_gradient" (dict "imageUrl" .Params.image "title" .Title "class" .Params.jumboClass) }}
+{{ partial "jumbotron_gradient" (dict "image" .Params.image "title" .Title) }}
 
 <div class="bg-off-white pt4">
 	<div class="mw7 center">
