--- a/site/layouts/webinars/webinars.html
+++ b/site/layouts/webinars/webinars.html
@@ -1,13 +1,26 @@
 {{ define "main" }}
 
-{{ partial "jumbotron_gradient" (dict "image" .Params.image "title" .Title) }}
+{{ partial "jumbotron_gradient" (dict "imageUrl" .Params.image "title" .Title "class" .Params.jumboClass) }}
 
-<div class="bg-off-white pt4">
-	<div class="mw7 center">
+<div class="bg-off-white pt4 cms">
+	<div class="mw9 center ph2-ns cms">
+		{{ if .Params.heading }}
 		<h2 class="f2 b lh-title mb2">{{.Params.heading}}</h2>
+		{{ end}}
+		{{ if .Params.intro }}
 		<p class="mb4 mw6">{{.Params.intro | markdownify}}</p>
-		{{ .Render "list" }}
+		{{ end}}
+		<!-- {{ if .Params.topSectionHeading }}
+		<p class="mb4 mw6">{{.Params.topSectionHeading}}</p>
+		{{ end}} -->		
+		<div class="w-100-ns pa2 ma1 bg-grey-2 raise center">
+			{{ if .Params.topSectionHeading  }} <h3> {{.Params.topSectionHeading }} </h3> 
+			{{end}}
+			{{ if .Params.topSectionHeadingIntro }}
+			<p class="mb4 mw7">{{.Params.topSectionHeadingIntro | markdownify}}</p>
+			{{ end}}
+			{{ .Render "list" }} 
+		</div>	
 	</div>
-
 </div>
 {{ end }}
