new friends tl tech and voice ep, also fixed image aspect ratios

--- a/site/layouts/section/friends-of-the-open-voice-network.html
+++ b/site/layouts/section/friends-of-the-open-voice-network.html
@@ -16,7 +16,7 @@
     {{ if .logos }}
     <div class="mw7 center flex flex-row flex-wrap mb4">
       {{ range .logos }}
-      <div class="w-100 w-33-ns ph1-ns">
+      <div class="w-100 w-33-ns pa4">
         <a href="{{ .link }}" target="_blank">
         <img class="w-100 friend-logo" src="{{ .image }}" alt="{{ .alt }}" />
         </a>
