--- a/site/layouts/_default/list-webinars-past.html
+++ b/site/layouts/_default/list-webinars-past.html
@@ -1,7 +1,9 @@
-<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">    
-    {{ range (where .Pages "Type" "webinars")  }}
-        <div class="ph1-ns w-50-ns flex">                  
-            {{ .Render "events/item"}}
+<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">  
+    {{$future_events :=  where (where .Pages "Type" "webinars") ".Params.endDate" "ge" (now).String }}  
+     {{ $future_events}})
+    {{ range $future_events  }}
+        <div class="ph1-ns w-50-ns flex">                            
+            {{ .Render "item"}}
         </div>
     {{ end }}
 </div>
