--- a/site/layouts/_default/list-webinars-upcoming.html
+++ b/site/layouts/_default/list-webinars-upcoming.html
@@ -1,10 +1,8 @@
-<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">    
-    {{now.YearDay}}
-    {{ range where (where .Pages "Type" "webinars") "date.YearDay" "ge" now.YearDay }}
-   
-        <div class="ph1-ns w-50-ns flex">    
+<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">  
+    {{ range where .Pages "Type" "webinars" }}
+          <div class="ph1-ns w-50-ns flex">    
             test              
-            {{ .Render "events/item"}}
+            {{ .Render "item"}}
         </div>
     {{ end }}
 </div>
