test webinar changes

--- a/site/layouts/_default/list-webinars-past.html
+++ b/site/layouts/_default/list-webinars-past.html
@@ -1,9 +1,11 @@
-<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">  
-    {{$future_events :=  where (where .Pages "Type" "webinars") ".Params.endDate.Unix" "ge" (now.Unix) }}  
-     {{ $future_events}})
-    {{ range $future_events  }}
-        <div class="ph1-ns w-50-ns flex">                            
-            {{ .Render "item"}}
-        </div>
+<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
+    {{$past_events := where .Pages "Type" "webinars" }}
+    {{ range sort $past_events }}
+    {{ $endDate := time .Params.endDate }}
+    {{ if lt $endDate.YearDay now.YearDay }}
+    <div class="ph1-ns w-50-ns flex">
+        {{ .Render "item"}}
+    </div>
+    {{ end}}
     {{ end }}
 </div>
