--- a/site/layouts/_default/list-webinars-upcoming.html
+++ b/site/layouts/_default/list-webinars-upcoming.html
@@ -1,8 +1,11 @@
-<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">  
-    {{ range where .Pages "Type" "webinars" }}
-          <div class="ph1-ns w-50-ns flex">    
-            test              
-            {{ .Render "item"}}
-        </div>
+<div class="w-100 flex-ns mhn1-ns flex-wrap mb3">
+    {{$future_events := where .Pages "Type" "webinars" }}
+    {{ range sort $future_events }}
+    {{ $endDate := time .Params.endDate }}
+    {{ if ge $endDate.YearDay now.YearDay }}
+    <div class="ph1-ns w-50-ns flex">
+        {{ .Render "item"}}
+    </div>
+    {{ end}}
     {{ end }}
 </div>
