--- a/site/layouts/webinars/item.html
+++ b/site/layouts/webinars/item.html
@@ -1,18 +1,10 @@
 <div class="w-100-ns pa3 bg-grey-1 br1 mb2 db raise">
-    {{ $t := time .Params.endDate }}
-    <!-- {{ $t.After now }} -->
-    {{ .Params.endDate }}
-    <!-- {{ (now.Format "2006/01/02")}} -->
-    {{ ( printf .Params.endDate | time )}}
-    {{ (now.Unix)}}
-    <!-- {{ (now).String }} -->
-  
-    <a href="{{ .RelPermalink }}" class="no-underline">
+     <a href="{{ .RelPermalink }}" class="no-underline">
     <img src="{{ .Params.listItemImage }}" alt="" class="center db mb3">
     <div class="tc">
         <p>{{ .Params.listItemTitle }}</p>
         <a href="/events/{{.Params.callToActionEvent}}"
-            target="_blank" rel="noopener" class="btn raise">{{.Params.callToActionEvent}}</a>
+            target="_blank" rel="noopener" class="btn raise">{{.Params.callToAction}}</a>
     </div>
     </a>
 </div>
