--- a/site/layouts/webinars/item.html
+++ b/site/layouts/webinars/item.html
@@ -1,10 +1,12 @@
 <div class="w-100-ns pa3 bg-grey-1 br1 mb2 db raise">
-     <a href="{{ .RelPermalink }}" class="no-underline">
-    <img src="{{ .Params.listItemImage }}" alt="" class="center db mb3">
+     <!-- <a href="{{ .RelPermalink }}" class="no-underline"> -->
+    <img src="{{ .Params.imageUrl }}" alt="" class="center db mb3 h5-ns">
+    {{if ne .Params.callToActionEvent nil }}
     <div class="tc">
-        <p>{{ .Params.listItemTitle }}</p>
+        <p>{{ .Params.title}}</p>
         <a href="/events/{{.Params.callToActionEvent}}"
             target="_blank" rel="noopener" class="btn raise">{{.Params.callToAction}}</a>
     </div>
-    </a>
+    {{ end }}
+    <!-- </a> -->
 </div>
