--- a/site/layouts/webinars/item.html
+++ b/site/layouts/webinars/item.html
@@ -1,4 +1,4 @@
-<div class="w-100-ns pa3 bg-grey-1 br1 mb2 db raise">
+<div class="w-100-ns pa4 bg-grey-1 br1 db">
      <!-- <a href="{{ .RelPermalink }}" class="no-underline"> -->
     <img src="{{ .Params.imageUrl }}" alt="" class="center db mb3 h5-ns">
     {{if ne .Params.callToActionEvent nil }}
