--- a/site/layouts/webinars/webinars.html
+++ b/site/layouts/webinars/webinars.html
@@ -22,7 +22,7 @@
 			{{ end}}					
 			{{ .Render "list-webinars-upcoming" }} 
 		</div>	
-		<div class="w-100-ns pa2 ma1 bg-grey-2 raise center">
+		<div class="w-100-ns pa4 pb1 pb4-m bg-grey-2 center">
 			{{ if .Params.bottomSectionHeading  }} <h3> {{.Params.bottomSectionHeading }} </h3> 
 			{{end}}
 			{{ if .Params.bottomSectionHeadingIntro }}
