--- a/site/layouts/webinars/item.html
+++ b/site/layouts/webinars/item.html
@@ -1,12 +1,18 @@
 <div class="w-100-ns pa4 bg-grey-1 br1 db">
-     <!-- <a href="{{ .RelPermalink }}" class="no-underline"> -->
+    <!-- <a href="{{ .RelPermalink }}" class="no-underline"> -->
+    <!-- check if videoUrl, if videoUrl it will superseed other variables -->
+    {{ if ne .Params.videoUrl nil }}
+    {{ partial "video_player" (dict "videoUrl" .Params.videoUrl "title" .Params.title) }}
+    {{ else }}
+    
     <img src="{{ .Params.imageUrl }}" alt="" class="center db mb3 h5-ns">
     {{if ne .Params.callToActionEvent nil }}
     <div class="tc">
         <p>{{ .Params.title}}</p>
-        <a href="/events/{{.Params.callToActionEvent}}"
-            target="_blank" rel="noopener" class="btn raise">{{.Params.callToAction}}</a>
+        <a href="/events/{{.Params.callToActionEvent}}" target="_blank" rel="noopener"
+            class="btn raise">{{.Params.callToAction}}</a>
     </div>
+    {{ end }}
     {{ end }}
     <!-- </a> -->
 </div>
