--- a/site/layouts/_default/list-webinars-upcoming.html
+++ b/site/layouts/_default/list-webinars-upcoming.html
@@ -1,5 +1,5 @@
 <div class="w-100 flex-ns flex-wrap justify-between">
-    {{$future_events := where .Pages "Type" "webinars" }}
+    {{$future_events := where (where .Pages "Type" "webinars") "Params.enabled" true }}
     {{ $counter := 0 }}
     {{ range sort $future_events }}
     {{ $endDate := time .Params.endDate }}
