fix container widths for webinars

--- a/site/layouts/partials/coming_soon.html
+++ b/site/layouts/partials/coming_soon.html
@@ -1,12 +1,4 @@
-<div class="w-100-ns pa3 bg-grey-1 br1 mb2 db raise">
-    <!-- <a href="{{ .RelPermalink }}" class="no-underline"> -->
-   <img src="/img/coming-soon-defaults.png" alt="" class="center db mb3 h5-ns">
-   <!-- {{if ne .Params.callToActionEvent nil }}
-   <div class="tc">
-       <p>{{ .Params.title}}</p>
-       <a href="/events/{{.Params.callToActionEvent}}"
-           target="_blank" rel="noopener" class="btn raise">{{.Params.callToAction}}</a>
-   </div>
-   {{ end }} -->
-   <!-- </a> -->
+<div class="w-100-ns  pa4 bg-grey-1 br1 db">
+   <img src="/img/coming-soon-defaults.png" alt="" 
+   class="center db mb3 h5-ns"> 
 </div>
