--- a/site/layouts/webinars/webinars.html
+++ b/site/layouts/webinars/webinars.html
@@ -14,7 +14,7 @@
 		<p class="mb4 mw6">{{.Params.topSectionHeading}}</p>
 		{{ end}} -->	
 			
-		<div class="w-100-ns pa2 ma1 bg-grey-2 raise center">
+		<div class="w-100-ns pa4 pb1 pb4-m bg-grey-2 center">
 			{{ if .Params.topSectionHeading  }} <h3> {{.Params.topSectionHeading }} </h3> 
 			{{end}}
 			{{ if .Params.topSectionHeadingIntro }}
