added whitepapers functionality

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -37,6 +37,7 @@
 					<li><a href="/voice-chats" class="">Voice Chats</a></li>
 					<li><a href="/calendar" class="">Calendar</a></li>
 					<li><a href="/webinars" class="">Webinars</a></li>
+					<li><a href="/white_papers" class="">White Papers</a></li>
 				</ul>
 			</li>
 			<li><a href="/industries" class="">Industries</a></li>
@@ -72,11 +73,13 @@
 					<li><a href="/faq" class="">FAQ</a></li>
 					<li><a href="/voice-chats" class="">Voice Chats</a></li>
 					<li><a href="/calendar" class="">Calendar</a></li>
+					<li><a href="/white_papers" class="">White Papers</a></li>
 				</ul>
 			</li>
 			<li><a href="/industries" class="">Industries</a></li>
 			<li><a href="/initiatives" class="">Initiatives</a></li>
 			<li><a href="/post" class="">News and Media</a></li>
+			<li><a href="/events" class="">Events</a></li>
 			<!-- <li><a href="/paper" class="">Papers</a></li> -->
 			<!-- <li><a href="/voice_interoperability_form" class="">Workshops</a></li> -->
 			<li><a href="/contact" class="">Contact</a></li>
