update nave items

--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,9 +1,10 @@
 <div class="divider-grey ">
-	<nav class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center bg-white divider-grey relative">
+	<nav
+		class="overflow-x-scroll overflow-x-visible-ns flex justify-between items-center center bg-white divider-grey relative">
 
 		<!-- Logo -->
 		<a href="/" class="pl3 db mr4 h-100 w4 flex-none">
-			<img src="/img/logo.svg" alt="Open Voice Network logo" class="br0 db mb0 w-100"/>
+			<img src="/img/logo.svg" alt="Open Voice Network logo" class="br0 db mb0 w-100" />
 		</a>
 
 		<!-- Primary Nav -->
@@ -14,75 +15,89 @@
 		</button>
 
 		<ul class="navbar">
-			<li><a href="/about" class="">About Us</a>
+			<li><a class="">About</a>
 				<ul>
+					<li><a href="/about/" class="">Who we are</a></li>
 					<li><a href="/affiliations" class="">Affiliations</a></li>
 					<li><a href="/ambassadors" class="">Ambassadors</a></li>
+					<li><a href="/communities" class="">Communities</a></li>
 					<li><a href="/industry-advisor-council" class="">Industry Advisor Council</a></li>
-					<li><a href="/audio-reviews" class="">Audio Reviews</a></li>
 				</ul>
 			</li>
-			<li><a href="/join" class="">Join</a>
+			<li><a class="">Join</a>
 				<ul>
+					<li><a href="/join" class="">Join Us</a></li>
 					<li><a href="/sponsoring_member" class="">Sponsoring Member</a></li>
 					<li><a href="/friends-of-the-open-voice-network" class="">Friends of the Open Voice Network</a></li>
-					<li><a href="/communities" class="">Communities</a></li>
-					<li><a href="/join/positions-to-hire" class="">Positions to Hire</a></li>
 				</ul>
 			</li>
-			
-			<li><a href="/resources" class="">Messaging</a>
+			<li> <a class="">Initiatives</a>
 				<ul>
-					<li><a href="/faq" class="">FAQ</a></li>
-					<li><a href="/voice-chats" class="">Voice Chats</a></li>
-					<li><a href="/calendar" class="">Calendar</a></li>
-					<li><a href="/webinars" class="">Webinars</a></li>
-					<li><a href="/white_papers" class="">White Papers</a></li>
+					<li><a href="/initiatives" class="">Core Initiatives</a></li>
+					<li><a href="/industries" class="">Industries</a></li>
 				</ul>
 			</li>
-			<li><a href="/industries" class="">Industries</a></li>
-			<li><a href="/initiatives" class="">Initiatives</a></li>
-			<li><a href="/post" class="">News and Media</a></li>
-			<li><a href="/events" class="">Events</a></li>
-			<!-- <li><a href="/paper" class="">Papers</a></li> -->
-			<!-- <li><a href="/voice_interoperability_form" class="">Workshops</a></li> -->
+			<li><a class="">Resources</a>
+				<ul>
+					<li><a href="/white_papers" class="">White Papers</a></li>
+					<li><a href="/webinars" class="">Webinars</a></li>
+					<li><a href="/post" class="">Blog</a></li>
+					<li><a href="/audio-reviews" class="">Audio Reviews</a></li>
+					<li><a href="/voice-chats" class="">Video</a></li>
+					<li><a href="/faq" class="">FAQ</a></li>
+				</ul>
+			</li>
+			<li><a class="">Events</a>
+				<ul>
+					<li><a href="/events" class="">Conferences and Speaking</a></li>
+					<li><a href="/calendar" class="">Meeting Calendar</a></li>
+				</ul>
+			</li>
 			<li><a href="/contact" class="">Contact</a></li>
 		</ul>
-
 	</nav>
 	<div class="mobile">
 		<ul class="navbar dn">
-			<li><a href="/about" class="">About Us</a>
+			<li><a class="">About</a>
 				<ul>
+					<li><a href="/about/" class="">Who we are</a></li>
 					<li><a href="/affiliations" class="">Affiliations</a></li>
 					<li><a href="/ambassadors" class="">Ambassadors</a></li>
+					<li><a href="/communities" class="">Communities</a></li>
 					<li><a href="/industry-advisor-council" class="">Industry Advisor Council</a></li>
-					<li><a href="/audio-reviews" class="">Audio Reviews</a></li>
 				</ul>
 			</li>
-			<li><a href="/join" class="">Join</a>
+			<li><a class="">Join</a>
 				<ul>
+					<li><a href="/join" class="">Join Us</a></li>
 					<li><a href="/sponsoring_member" class="">Sponsoring Member</a></li>
 					<li><a href="/friends-of-the-open-voice-network" class="">Friends of the Open Voice Network</a></li>
-					<li><a href="/communities" class="">Communities</a></li>
-					<li><a href="/join/positions-to-hire" class="">Positions to Hire</a></li>
 				</ul>
 			</li>
-			<li><a href="/resources" class="">Messaging</a>
+			<li> <a class="">Initiatives</a>
 				<ul>
-					<li><a href="/faq" class="">FAQ</a></li>
-					<li><a href="/voice-chats" class="">Voice Chats</a></li>
-					<li><a href="/calendar" class="">Calendar</a></li>
-					<li><a href="/white_papers" class="">White Papers</a></li>
+					<li><a href="/initiatives" class="">Core Initiatives</a></li>
+					<li><a href="/industries" class="">Industries</a></li>
 				</ul>
 			</li>
-			<li><a href="/industries" class="">Industries</a></li>
-			<li><a href="/initiatives" class="">Initiatives</a></li>
-			<li><a href="/post" class="">News and Media</a></li>
-			<li><a href="/events" class="">Events</a></li>
-			<!-- <li><a href="/paper" class="">Papers</a></li> -->
-			<!-- <li><a href="/voice_interoperability_form" class="">Workshops</a></li> -->
+			<li><a class="">Resources</a>
+				<ul>
+					<li><a href="/white_papers" class="">White Papers</a></li>
+					<li><a href="/webinars" class="">Webinars</a></li>
+					<li><a href="/post" class="">Blog</a></li>
+					<li><a href="/audio-reviews" class="">Audio Reviews</a></li>
+					<li><a href="/voice-chats" class="">Video</a></li>
+					<li><a href="/faq" class="">FAQ</a></li>
+				</ul>
+			</li>
+			<li><a class="">Events</a>
+				<ul>
+					<li><a href="/events" class="">Conferences and Speaking</a></li>
+					<li><a href="/calendar" class="">Meeting Calendar</a></li>
+				</ul>
+			</li>
 			<li><a href="/contact" class="">Contact</a></li>
+		</ul>
 		</ul>
 	</div>
 </div>
