corrected read paper call to action button text

--- a/site/layouts/partials/white_paper.html
+++ b/site/layouts/partials/white_paper.html
@@ -10,7 +10,7 @@
     <div class="tc">
         <p>{{ .title}}</p>
         <a href="{{.buttonLink}}" target="_blank" rel="noopener"
-            class="btn raise">Read More</a>
+            class="btn raise">Read Paper</a>
             <a href="{{.feedBackUrl}}" target="_blank" rel="noopener"
             class="btn raise">Leave Feedback</a>
     </div>
