corrected some spacing

--- a/site/layouts/section/white_papers.html
+++ b/site/layouts/section/white_papers.html
@@ -8,7 +8,7 @@
 		<h2 class="f2 b lh-title mb2">{{.Params.heading}}</h2>
 		{{ end}}
 		{{ if .Params.intro }}
-		<p class="mb4 mw6">{{.Params.intro | markdownify}}</p>
+		<p class="pa1 mb4 mw7">{{.Params.intro | markdownify}}</p>
 		{{ end}}						
 		<div class="w-100-ns pa4 pb1 pb4-m bg-grey-2 center">
 		{{ .Render "list-white-papers"}}	
